# computer_vision_test

./: main.py  pyproject.toml
